# miniGit

./: CMakeLists.txt  README.md
docs/: DATA_STRUCTURES.md  internals.md
include/: branch.hpp  commands.hpp  index.hpp  merkle.hpp  objects.hpp  repository.hpp  sha1.hpp  types.hpp  utils.hpp
src/: branch.cpp  commands.cpp  index.cpp  main.cpp  merkle.cpp  objects.cpp  repository.cpp  utils.cpp
tests/: run_tests.sh
